<resources>
    <string name="app_name">Adoptcat</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="adoptcat_description">Adoptcat</string>
    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_login">Login</string>
    <string name="forgot_password_register">Forgot password?</string>
    <string name="login_register">No account yet? Register here</string>
    <string name="register_label">Register</string>
    <string name="register_name_hint">Name</string>
    <string name="register_email_hint">E-mail</string>
    <string name="register_password_hint">Password</string>
    <string name="register_finish_button">Finish</string>
    <string name="register_phone_hint">Phone</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="forgot_password_textview">Forgot password?</string>
    <string name="forgot_password_tip_textview">Enter your email below so we can proceed.</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="nav_anounce_title">Announce</string>
    <string name="nav_maps_title">Map</string>
    <string name="nav_profile_title">Profile</string>
    <string name="nav_logout_title">Exit</string>
    <string name="account_city">City</string>
    <string name="account_phone">Phone</string>
    <string name="registercat_description">Description</string>
    <string name="registercat_amoutcats">Amount:</string>
    <string name="registercat_location">Location</string>
    <string name="registercat_getcurrentlocatio">Current Location</string>
    <string name="registercat_definelocation">Define location</string>
    <string name="registercat_annotation">Note</string>
    <string name="adoptcats_description">Description</string>
    <string name="adoptcats_annotation">Notes</string>
    <string name="call">Call</string>
    <string name="phone_user" >Phone user</string>
    <string name="city_user" >City User</string>
    <string name="user_name">User name</string>
    <string name="user_email" >Email user</string>
    <string name="user_cat" >User cat</string>
    <string name="phone_user_cat" >Phone cat user</string>
    <string name="email_adoptcat" >Email</string>
    <string name="register_image_logo">Tela de cadastramente de usuários</string>
    <string name="todo">TODO</string>
    <string name="register_button_takephoto">Tire uma foto</string>
    <string name="cat_photo">Cat photo</string>
    <string name="dig_take_picture_confirm">Confirm</string>
    <string name="dig_take_picture_cancel">Cancel</string>
    <string name="dig_take_picture_title">Take a picture</string>
    <string name="dig_photo_empty">The photo is empty yet</string>
    <string name="register_finished">Cadastrado com sucesso!</string>
    <string name="register_failed">Falha ao cadastrar usuário</string>
    <string name="forgot_password_email_is_empty">E-mail está vazio</string>
    <string name="forgot_password_fail_to_send">Falha ao enviar senha</string>
    <string name="forgot_password_emai_sended">Senha enviada para</string>
    <string name="login_fields_empty">Os campos estão vazios</string>
    <string name="login_invalid_login_or_passwd">E-mail ou senha inválido</string>
    <string name="login_sucessful">Login realizado</string>
    <string name="main_loggof_alert_title">Realizar Logoff</string>
    <string name="main_loggof_alert_message">Tem certeza que deseja sair do aplicativo?</string>
    <string name="nav_notifies">Notificações</string>
    <string name="account_photo_description">Foto do usuário</string>
    <string name="dig_update_title">Atualize</string>
    <string name="dig_field_empty">Campo está vazio</string>
    <string name="register_city_hint">City</string>
    <string name="account_failed_donwload_uphoto">Failed to download user photo</string>
    <string name="dig_name_hint">Name</string>
    <string name="dig_phone_hint">Phone</string>
    <string name="dig_city_hint">City</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="registercat_check_vaccinated">Vaccinated</string>
    <string name="registercat_check_dewormed">Dewormed</string>
    <string name="registercat_check_spayed">Spayed</string>
    <string name="registercat_information">Informations</string>
    <string name="registercat_select_photo">Select a photo</string>
    <string name="dialog_takephoto_option">Take photo</string>
    <string name="dialog_choosephoto_option">Choose from library</string>
    <string name="dialog_cancel_option">Cancel</string>
    <string name="dialog_title">Choose photo</string>
    <string name="request_permission">É preciso a permissão</string>
    <string name="request_permission_title">Request permission</string>
    <string name="request_permission_dialog_ok">Ok</string>
    <string name="request_permission_dialog_cancel">Cancel</string>
    <string name="registercat_fieldsproblem">The values are not valid</string>
    <string name="dialog_title_setmylocation">Define your location</string>
    <string name="mapfrag_imhere">I\'m here!</string>
    <string name="myannounces_title">My announcements</string>
    <string name="list_iten_vaccinetedcheck">Vaccinated</string>
    <string name="list_iten_dewomedcheck">Dewomed</string>
    <string name="list_iten_spayedcheck">Spayed</string>
    <string name="registercat_success_">Cat has been regitred!</string>
    <string name="registercat_title">Title</string>
    <string name="registercat_informationcat">Description</string>
    <string name="adoptcats_title">Title</string>
    <string name="adoptcat_error_msg">No photo founded</string>
    <string name="dialog_photo_title">Photo</string>
    <string name="dialog_announcement_title">Announcement</string>
    <string name="dialog_edit_announcement_option">Edit Announcement</string>
    <string name="dialog_delete_announcement_option">Delete Annoucement</string>
    <string name="myannounces_annoucement_deleted">Announcement has been deleted</string>
</resources>
