<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_maps"
        android:title="@string/nav_maps_title"
        android:icon="@drawable/icon_map"/>
    <item
        android:id="@+id/nav_profile"
        android:title="@string/nav_profile_title"
        android:icon="@drawable/icon_profile"/>

    <item
        android:id="@+id/nav_anounce"
        android:title="@string/nav_anounce_title"
        android:icon="@drawable/icon_add"/>

    <item
        android:id="@+id/nav_announcements"
        android:title="@string/nav_notifies"
        android:icon="@drawable/ic_cat"/>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/nav_logout_title"
        android:icon="@drawable/icon_logout"/>



</menu>
