<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icon_profile"
            android:title="@string/nav_profile_title" />
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/icon_notifies"
            android:title="@string/nav_anounce_title" />

        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/icon_map"
            android:title="@string/nav_maps_title" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icon_logout"
            android:title="@string/nav_logout_title" />

    </group>

</menu>
