<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.adoptcat.adoptcat.fragments.AdoptCatsFragment">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="230dp"
        android:clickable="true"
        android:contentDescription="@string/call"
        app:backgroundTint="#64dd17"
        app:srcCompat="@drawable/icon_phone" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="30dp">


            <ImageView
                android:layout_width="280dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/cat_photo"
                android:src="@drawable/ic_menu_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/user_cat"
                android:text="@string/user_cat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/phone_user_cat"
                android:text="@string/phone_user_cat" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/adoptcats_description"
            android:text="@string/adoptcats_description"
            android:textSize="@dimen/big_textsize"
            android:textStyle="bold" />
    <TextView android:id="@+id/adoptcatsDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/adoptcats_annotation"
            android:text="@string/adoptcats_annotation"
            android:textSize="@dimen/big_textsize"
            android:textStyle="bold" />
    <TextView  android:id="@+id/adoptcatsAnotation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>




</android.support.design.widget.CoordinatorLayout>
