<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:columnCount="3"
    android:orientation="vertical"
    android:padding="@dimen/default_layout_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="0"
        android:gravity="center"
        android:text="@string/dig_update_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/darkBrown" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dig_name_hint"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="2">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dig_phone_hint"
            android:inputType="phone" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="3">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/cityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dig_city_hint"
            android:inputType="textCapCharacters" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/cancelButton"
        android:layout_column="0"
        android:layout_row="4"
        android:background="@color/colorAccent"
        android:elevation="8dp"
        android:text="@string/dig_take_picture_cancel"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_column="2"
        android:layout_marginEnd="10dp"
        android:layout_row="4"
        android:background="@color/colorAccent"
        android:elevation="8dp"
        android:text="@string/dig_take_picture_confirm"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold" />

</GridLayout>