<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:columnCount="3"
    android:padding="@dimen/default_padding"
    android:useDefaultMargins="true"
    tools:context="com.adoptcat.adoptcat.fragments.RegisterCatFragment">

    <ImageView android:id="@+id/catImageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="0"
        android:layout_rowSpan="2"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAccent"
        android:src="@drawable/icon_camera" />

    <TextView
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="2"
        android:contentDescription="@string/registercat_description"
        android:text="@string/registercat_description"
        android:textSize="@dimen/big_textsize"
        android:textStyle="bold" />

    <EditText android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="3"
        android:lines="2" />

    <TextView
        android:layout_column="0"
        android:layout_row="4"
        android:textSize="18dp"
        android:contentDescription="@string/registercat_amoutcats"
        android:text="@string/registercat_amoutcats" />

    <EditText android:id="@+id/amountEditText"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:inputType="number"
        android:text="1"
        android:textAlignment="textEnd"/>


    <Button android:id="@+id/deflocationButton"
        android:layout_column="0"
        android:layout_row="5"
        android:background="@color/colorAccent"
        android:contentDescription="@string/registercat_definelocation"
        android:text="@string/registercat_definelocation"
        android:textColor="@color/darkBrown"
        android:textStyle="bold" />

    <TextView android:id="@+id/locationTextView"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1" />

    <TextView
        android:layout_column="0"
        android:layout_row="6"
        android:layout_columnSpan="3"
        android:text="@string/registercat_information"
        android:textSize="24sp" />

    <ScrollView
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/vaccinetedCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registercat_check_vaccinated" />

            <CheckBox
                android:id="@+id/dewomedCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registercat_check_dewormed" />

            <CheckBox
                android:id="@+id/spayedCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registercat_check_spayed" />
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cancelFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="9"
        android:layout_gravity="left"
        android:clickable="true"
        app:backgroundTint="@android:color/holo_red_dark"
        app:srcCompat="@drawable/icon_cancel" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/finishFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:clickable="true"
        app:backgroundTint="#00c853"
        app:srcCompat="@drawable/icon_ok" />

</GridLayout>
