<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:padding="@dimen/default_padding"
    tools:context="com.adoptcat.adoptcat.activities.LoginActivity">

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_gravity="center"
        android:contentDescription="@string/adoptcat_description"
        android:paddingBottom="40dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/login_email_hint"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
             />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/login_password_hint"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/loginLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:contentDescription="@string/login_login"
        android:elevation="8dp"
        android:onClick="doLogin"
        android:text="@string/login_login"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/forgotPasswordLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/fgtpassword_button"
        android:contentDescription="@string/forgot_password_register"
        android:elevation="8dp"
        android:onClick="openForgotPasswordActivity"
        android:text="@string/forgot_password_register"
        android:layout_marginBottom="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/registerLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/register_button"
        android:contentDescription="@string/login_register"
        android:gravity="center"
        android:onClick="openResgisterActivity"
        android:text="@string/login_register"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/darkBrown"
        android:layout_gravity="center"
        android:elevation="8dp"/>

</LinearLayout>
