<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:columnCount="2"
    tools:context="com.adoptcat.adoptcat.RegisterActivity"
    android:padding="@dimen/default_padding">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="TODO"
        android:src="@drawable/icon_register" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register_label"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/label_activity"
        android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nameRegisterEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_name_hint"
            android:inputType="text"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/emailRegisterEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/phoneRegisterEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_phone_hint"
            android:inputType="number"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordRegisterEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_password_hint"
            android:inputType="textPassword"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light" />


    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="66dp"
        android:layout_height="50dp"
        android:background="?attr/colorAccent"
        app:srcCompat="@drawable/icon_camera" />


    <Button
        android:id="@+id/finishRegisterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginTop="@dimen/default_padding"
        android:background="@color/darkBrown"
        android:text="@string/register_finish_button"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>
