<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTextView"
        android:text="Title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <TextView android:id="@+id/dataTextView"
        android:text="Date"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />
    <TextView android:id="@+id/amountTextView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="Amount:"/>

    <TextView android:id="@+id/vaccinetedTextView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/list_iten_vaccinetedcheck"/>

    <TextView android:id="@+id/dewomedTextView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"

        android:text="@string/list_iten_dewomedcheck"/>
    <TextView android:id="@+id/spayedTextView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/list_iten_spayedcheck"/>
    <TextView android:id="@+id/descriptionTextView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="Description"/>



</LinearLayout>