<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:columnCount="3"
    android:orientation="vertical"
    android:padding="@dimen/default_layout_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="0"
        android:gravity="center"
        android:text="@string/dig_take_picture_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/darkBrown" />

    <ImageView
        android:id="@+id/photoImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_columnSpan="3"
        android:layout_gravity="center_horizontal"
        android:layout_row="1"
        android:src="@drawable/icon_camera" />



    <Button
        android:id="@+id/cancelButton"
        android:layout_column="0"
        android:layout_row="2"
        android:background="@color/darkBrown"
        android:elevation="8dp"
        android:text="@string/dig_take_picture_cancel"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_column="2"
        android:layout_marginEnd="10dp"
        android:layout_row="2"
        android:background="@color/darkBrown"
        android:elevation="8dp"
        android:text="@string/dig_take_picture_confirm"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold" />

</GridLayout>